--- a/serenity.properties
+++ b/serenity.properties
@@ -6,23 +6,22 @@ serenity.take.screenshots=DISABLED
 untrusted.certificates=true
 
 #Android
-webdriver.driver = appium
-appium.automationName= Espresso
-appium.hub = http://localhost:4723/wd/hub
-appium.platformName = Android
-appium.platformVersion = 7.0
-appium.deviceName = Nexus5
-appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
+#webdriver.driver = appium
+#appium.hub = http://localhost:4723/wd/hub
+#appium.platformName = Android
+#appium.platformVersion = 8.0
+#appium.deviceName = PixelXL
+#appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
 
 #iOS
-#webdriver.driver=appium
+webdriver.driver=appium
 #appium.automationName= XCUITest
-#appium.hub = http://localhost:4723/wd/hub
-#appium.deviceName=iPhone 8
-#appium.platformName=iOS
-#appium.platformVersion= 11.0
-##appium.noReset= true
-#appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
+appium.hub = http://localhost:4723/wd/hub
+appium.deviceName=iPhone 8
+appium.platformName=iOS
+appium.platformVersion= 11.0
+#appium.noReset= true
+appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
 
 #serenity.driver.capabilities="appiumVersion:1.6.5;deviceOrientation:portrait"
 
