added extra package after trying to combine tests for 2 apps

--- a/serenity.properties
+++ b/serenity.properties
@@ -6,23 +6,20 @@ serenity.take.screenshots=DISABLED
 untrusted.certificates=true
 
 #Android
-#webdriver.driver = appium
-#appium.hub = http://localhost:4723/wd/hub
-#appium.platformName = Android
-#appium.platformVersion = 8.0
-#appium.deviceName = PixelXL
-#appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
+webdriver.driver = appium
+appium.hub = http://localhost:4723/wd/hub
+appium.platformName = Android
+appium.platformVersion = 8.0
+appium.deviceName = PixelXL
+appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
 
 #iOS
-webdriver.driver=appium
-#appium.automationName= XCUITest
-appium.hub = http://localhost:4723/wd/hub
-appium.deviceName=iPhone 8
-appium.platformName=iOS
-appium.platformVersion= 11.0
-#appium.noReset= true
-appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
-
-#serenity.driver.capabilities="appiumVersion:1.6.5;deviceOrientation:portrait"
+#webdriver.driver=appium
+#appium.hub = http://localhost:4723/wd/hub
+#appium.deviceName=iPhone 8
+#appium.platformName=iOS
+#appium.platformVersion= 11.0
+##appium.noReset= true
+#appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
 
 # mvn clean verify -DtestEnvironment=android "-Dcucumber.options=--tags @login"
