startup process complete for smoketest

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,4 @@
-# How long does Serenity wait for elements that are not present on the screen to load
-#webdriver.timeouts.implicitlywait=5000
-#webdriver.wait.for.timeout=5000
-#serenity.timeout=5000
+serenity.logging = VERBOSE
 serenity.take.screenshots=DISABLED
 untrusted.certificates=true
 
