Added more Pages for smoke test

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,11 @@
 serenity.logging = VERBOSE
 serenity.take.screenshots=DISABLED
-untrusted.certificates=true
+#untrusted.certificates=true
+serenity.console.colors = true
+
+#Reset
+#appium.noReset = true
+#appium.fullReset = false
 
 #Android
 webdriver.driver = appium
