--- a/serenity.properties
+++ b/serenity.properties
@@ -8,20 +8,24 @@ serenity.console.colors = true
 #appium.fullReset = false
 
 #Android
-webdriver.driver = appium
-appium.hub = http://localhost:4723/wd/hub
-appium.platformName = Android
-appium.platformVersion = 8.0
-appium.deviceName = PixelXL
-appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
+#webdriver.driver = appium
+#appium.hub = http://localhost:4723/wd/hub
+#appium.platformName = Android
+#appium.platformVersion = 8.0
+#appium.deviceName = PixelXL
+#appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
 
 #iOS
-#webdriver.driver=appium
-#appium.hub = http://localhost:4723/wd/hub
-#appium.deviceName=iPhone 8
-#appium.platformName=iOS
-#appium.platformVersion= 11.0
-##appium.noReset= true
-#appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
+webdriver.driver=appium
+appium.hub = http://localhost:4723/wd/hub
+appium.deviceName=iPhone 8
+appium.platformName=iOS
+appium.platformVersion= 11.1
+appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
+appium.automationName=XCUITEST
+
+#appium.locationServicesEnabled=true
+#appium.locationServicesAuthorized=false
+#appium.bundleId=gov.dhs.tsa.mytsa.prod.dev
 
 # mvn clean verify -DtestEnvironment=android "-Dcucumber.options=--tags @login"
