added test test cases

--- a/serenity.properties
+++ b/serenity.properties
@@ -8,21 +8,21 @@ serenity.console.colors = true
 #appium.fullReset = false
 
 #Android
-#webdriver.driver = appium
-#appium.hub = http://localhost:4723/wd/hub
-#appium.platformName = Android
-#appium.platformVersion = 8.0
-#appium.deviceName = PixelXL
-#appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
+webdriver.driver = appium
+appium.hub = http://localhost:4723/wd/hub
+appium.platformName = Android
+appium.platformVersion = 8.0
+appium.deviceName = PixelXL
+appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
 
 #iOS
-webdriver.driver=appium
-appium.hub = http://localhost:4723/wd/hub
-appium.deviceName=iPhone 8
-appium.platformName=iOS
-appium.platformVersion= 11.1
-appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
-appium.automationName=XCUITEST
+#webdriver.driver=appium
+#appium.hub = http://localhost:4723/wd/hub
+#appium.deviceName=iPhone 8
+#appium.platformName=iOS
+#appium.platformVersion= 11.1
+#appium.app= /Users/jaeshin/TSA/IPA for testing/MyTSA.app
+#appium.automationName=XCUITEST
 
 #appium.locationServicesEnabled=true
 #appium.locationServicesAuthorized=false
