Updated project without cucumber

--- a/serenity.properties
+++ b/serenity.properties
@@ -8,12 +8,12 @@ serenity.console.colors = true
 #appium.fullReset = false
 
 #Android
-webdriver.driver = appium
-appium.hub = http://localhost:4723/wd/hub
-appium.platformName = Android
-appium.platformVersion = 8.0
-appium.deviceName = PixelXL
-appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
+#webdriver.driver = appium
+#appium.hub = http://localhost:4723/wd/hub
+#appium.platformName = Android
+#appium.platformVersion = 8.0
+#appium.deviceName = PixelXL
+#appium.app = /Users/jaeshin/TSA/IPA for testing/app-Ite-debug.apk
 
 #iOS
 #webdriver.driver=appium
