--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,14 @@ buildscript {
 }
 
 dependencies {
-    compile group: 'net.serenity-bdd', name: 'serenity-core', version: '1.8.21'
-    compile group: 'net.serenity-bdd', name: 'serenity-junit', version: '1.8.21'
+    testCompile group: 'net.serenity-bdd', name: 'serenity-core', version: '1.8.21'
+    testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: '1.8.21'
 
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
-
 }
+
+
+
 gradle.startParameter.continueOnFailure = true
